--- a/src/main/resources/templates/main/mainpage.html
+++ b/src/main/resources/templates/main/mainpage.html
@@ -8,40 +8,7 @@
     <script defer th:src="@{/js/main/mainpage.js}"></script>
   </head>
   <body>
-    <header>
-      <div class="header_layout">
-        <h1 class="header_logo">
-          <div class="header_logo_layout">
-             <!--홈페이지 버튼 -->
-            <a th:href="@{/}">
-              <img
-                th:src="@{/images/book/HippoBook_logo.png}"
-                alt=""
-                class="header_logo_images"
-              />
-            </a>
-          </div>
-        </h1>
-        <div class="header_right_layout">
-          <a th:href="@{/alarm}">
-            <!-- 알람 페이지 이동  -->
-            <img th:src="@{/images/book/alarm.png}" alt="" class="header_right_alarm" />
-          </a>
-          <!-- 로그인 박스 -->
-          <ul class="header_right_login">
-            <button type="button" class="header_right_login_btn">
-              <a th:href="@{/user/login}" class="header_right_login_box">로그인</a>
-            </button>
-            <button type="button" class="header_right_login_btn">
-              <a th:href="@{/user/phone-info}" class="header_right_login_box">회원가입</a>
-            </button>
-          </ul>
-        </div>
-      </div>
-    </header>
-
-
-
+  <header class="header" th:replace="~{/fragment/header :: header}"></header>
     <main>
       <!-- 메인 상단 -->
       <div class="main_top">
@@ -57,7 +24,7 @@
           <div class="main_top_category_tap">
             <ul class="main_top_category_list">
               <li class="main_top_category_list2">
-                <a href="" class="main_top_category_list_title">내 서재</a>
+                <a th:href="@{/mypage/int}" class="main_top_category_list_title">내 서재</a>
                 <!-- 내 서재 이동 -->
               </li>
               <li class="main_top_category_list2">
@@ -174,8 +141,7 @@
                               <div class="novel_thumbnail_inner">
                                 <div class="novel_thumbnail_inner2">
                                   <div class="novel_thumbnail_inner_picture">
-                                    <img th:src="@{/images/main/novel_thumbnail.png}" alt=""
-                                         class="novel_thumbnail_inner_picture2">
+                                    <img th:src="@{'/upload/' + ${read.readUploadPath + '/' + read.readUuId + '_' + read.readFileName}}" alt="" class="novel_thumbnail_inner_picture2">
                                   </div>
                                 </div>
                               </div>
@@ -217,6 +183,7 @@
                         <div class="main_book_report_content" th:text="${novel.novelContent}"></div>
                       </div>
                       <div class="main_book_report_writer_content">
+                        <img class="main_book_report_writer_content_icon" th:src="@{'/upload/' + ${novel.uploadPath + '/' + novel.uuId + '_' + novel.fileName}}" alt="">
                         <div class="main_book_report_writer_content_username" th:text="${novel.userNickName}"></div>
                       </div>
                     </a>
@@ -239,7 +206,7 @@
                   <a href=""> <!--중고거래 게시글로 이동-->
                     <div class="main_deal_book_thumbnail">
                       <div class="main_deal_book_thumbnail_inner">
-                        <img th:src="@{/images/main/deal_thumbnail.png}" alt="" class="main_deal_book_thumbnail_img">
+                        <img class="main_deal_book_img" th:src="@{'/upload/' + ${deal.dealUploadPath + '/' + deal.dealUuid + '_' + deal.dealFileName}}" alt="">
                       </div>
                     </div>
                   </a>
