--- a/src/main/resources/templates/alarm/alarmpage.html
+++ b/src/main/resources/templates/alarm/alarmpage.html
@@ -17,8 +17,12 @@
             <div  class="cont">
               <div class="alarm_inner">
                 <div class="alarm_content">
-                    <a href="" class="alarm_book"> <!--북 페이지 이동-->
-                    <span>알림 내용</span>
+                    <a th:href="@{/book/info}" class="alarm_book"> <!--북 페이지 이동-->
+                        <div class="alarm_box">
+                            <span>불편한 편의점 김호연 신작 !</span>
+                            <div>(광고) 히포북에서 만나보세요 </div>
+                            <div>(수신거부: 설정 > 알림 설정)</div>
+                        </div>
                     </a>
                 </div>
               </div>
@@ -29,21 +33,11 @@
             <div class="cont">
                 <div class="alarm_inner">
                     <div class="alarm_content">
-                        <a href="" class="alarm_book"> <!--북 페이지 이동-->
-                            <span>공지사항 내용</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </li>
-        <li>
-            <a href="" class="alarm_btn">이벤트</a>
-            <div class="cont">
-                <div class="alarm_inner">
-                    <div class="alarm_content">
-                        <a href="" class="alarm_book"> <!--북 페이지 이동-->
-                            <span>이벤트 내용</span>
-                        </a>
+                        <div  class="alarm_box">
+                            <a th:href="@{/book/info}" class="alarm_book"> <!--북 페이지 이동-->
+                                <span>공지사항이 없습니다</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
