--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -16,8 +16,7 @@
                 <img class="logo-picture" th:src="@{/images/user/Logo.png}">
                 <h3 class="title">회원가입</h3>
                 <p class="sub-title">나만의 작은 도서관 히포북</p>
-                <div class="mds-input input mds-input--default mds-input--required mds-input--left"
-                     style="height: 295px;">
+                <div class="mds-input input mds-input--default mds-input--required mds-input--left" style="height: 223px;">
                     <div class="picture-box">
                         <div class="inner">
                             <div class="image-box"></div>
@@ -45,7 +44,7 @@
                             </label>
                         </div>
                     </div>
-                    <div class="input-item fade-in">
+                    <div class="input-item">
                         <div class="jumin-number">
                             <div class="one">
                                 <div class="mds-input input jumin1 mds-input--default mds-input--left">
@@ -87,37 +86,10 @@
                                         class="mds-icon--input-delete clear-button clear-jumin"
                                         style="display: none;"></button>
                             </div>
-                        </div>
-                        <div data-e-1160 aria-owns="mdsselect-input- 156"
-                             class="mds-select input mds-select--default mds-select--action" name="agency">
-                            <div class="inner" style="height: 56px;">
-                                <span id="mdsselct-label-input-156" class="label">통신사</span>
-                                <input type="text" placeholder="통신사 선택" readonly="readonly" class="mds-select-input">
+                            <div class="inner">
                             </div>
                         </div>
-                        <i class="mds-icon--down-filled">
-                        </i>
                     </div>
-                    <ul role="listbox" aria-labelledby="mdsselct-label-input-156" style="display: none;">
-                        <li role="option" id="input-156-0" tabindex="-1" class>
-                            <span>SKT</span>
-                        </li>
-                        <li role="option" id="input-156-1" tabindex="-1" class>
-                            <span>KT</span>
-                        </li>
-                        <li role="option" id="input-156-2" tabindex="-1" class>
-                            <span>LG U+</span>
-                        </li>
-                        <li role="option" id="input-156-3" tabindex="-1" class>
-                            <span>SKT 알뜰폰</span>
-                        </li>
-                        <li role="option" id="input-156-4" tabindex="-1" class>
-                            <span>KT 알뜰폰</span>
-                        </li>
-                        <li role="option" id="input-156-5" tabindex="-1" class>
-                            <span>LG U+ 알뜰폰</span>
-                        </li>
-                    </ul>
                 </div>
                 <div class="input-item">
                     <div class="mds-input input mds-input--default mds-input--left">
