"마이페이지 소개페이지 최근 담은책 html 타임리프문 추가" "마이페이지 소개페이지 헤드 수정"

--- a/src/main/resources/static/css/mypage/myPageInt.css
+++ b/src/main/resources/static/css/mypage/myPageInt.css
@@ -192,8 +192,8 @@ input[type="file"] {
   padding: 10px;
 }
 #best-book-img{
-  width: 150px;
-  height: 150px;
+  width: 129px;
+  height: 120px;
   border: solid #96eae8;
 }
 
@@ -424,12 +424,12 @@ h1 {
   height: 240px;
 }
 
-button {
-  background-color: #2bc1bf;
-  height: 30px;
-  width: 50%;
-  border-radius: 20px;
-}
+/*button {*/
+/*  background-color: #2bc1bf;*/
+/*  height: 30px;*/
+/*  width: 50%;*/
+/*  border-radius: 20px;*/
+/*}*/
 
 #reading-book-delete-button {
   display: flex;
