--- a/src/main/resources/templates/mypage/myPageBookContainer.html
+++ b/src/main/resources/templates/mypage/myPageBookContainer.html
@@ -11,36 +11,7 @@
 
 
 <div>
-    <header>
-        <div class="header_layout">
-            <h1 class="header_logo">
-                <div class="header_logo_layout">
-                    <a href="">
-                        <!--홈페이지 버튼 -->
-                        <img
-                                src="/images/main/HippoBook_logo.png"
-                                alt=""
-                                class="header_logo_images"
-                        />
-                    </a>
-                </div>
-            </h1>
-            <div class="header_right_layout">
-                <a href="">
-                    <!-- 알람 페이지 이동  -->
-                    <img
-                            src="/images/main/alarm.png"
-                            alt=""
-                            class="header_right_alarm"
-                    />
-                </a>
-                <ul class="header_right_login">
-                    <a href="" class="header_right_login_box">로그인</a>
-                </ul>
-            </div>
-        </div>
-    </header>
-
+    <header class="header" th:replace="~{/fragment/header :: header}"></header>
     <main>
         <div class="main_top">
             <div class="main_top_layout">
