--- a/src/main/resources/templates/mypage/myWriteContent.html
+++ b/src/main/resources/templates/mypage/myWriteContent.html
@@ -18,7 +18,7 @@
                     <a href="">
                         <!--홈페이지 버튼 -->
                         <img
-                                src="../myPageImg/HippoBook_logo.png"
+                                src="/imgs/mypage/HippoBook_logo.png"
                                 alt=""
                                 class="header_logo_images"
                         />
@@ -29,7 +29,7 @@
                 <a href="">
                     <!-- 알람 페이지 이동  -->
                     <img
-                            src="../myPageImg/alarm.png"
+                            src="/imgs/mypage/alarm.png"
                             alt=""
                             class="header_right_alarm"
                     />
@@ -47,7 +47,7 @@
                 <a href="">
                     <!-- 카테고리  -->
                     <img
-                            src="../myPageImg/Category.png"
+                            src="/imgs/mypage/Category.png"
                             alt=""
                             class="main_top_category"
                     />
@@ -71,7 +71,7 @@
             </div>
         </div>
     </main>
-    <section class="profile">
+    <section class="profile" th:object="${profileDto}">
         <div class="profile-all">
             <div id="profile-photo">
                 <input
@@ -87,16 +87,20 @@
                 />
             </div>
             <div id="profile-name">
-                <h3>책먹는 하마</h3>
+                <h3 th:text="${profileDto.userNickName}"></h3>
                 <span>님의 서재</span>
             </div>
             <div id="follow">
-                <span>팔로워 <span>0</span></span>
-                <span>팔로잉 <span>0</span></span>
+                <span>팔로워 <span th:text="${profileDto.followerCnt}"></span></span>
+                <span>팔로잉 <span th:text="${profileDto.followingCnt}"></span></span>
             </div>
         </div>
         <div id="my-favorite-book">
-            <img src="/images/mypage/인생책 이미지.png" alt=""/>
+            <img th:if="*{fileId == null}"
+                 th:src="@{/imgs/mypage/best_book_default.png}">
+            <img th:unless="*{fileId == null}"
+                 th:src="@{'/upload/' + *{fileUploadPath} + '/' + *{fileUuid} + '_' + *{fileName}}"
+                 id="best-book-img" alt=""/>
         </div>
     </section>
 </div>
