관리자 스티커 페이지 데이터 화면에 띄우기 성공

--- a/src/main/resources/templates/administrator/admin_follow.html
+++ b/src/main/resources/templates/administrator/admin_follow.html
@@ -105,13 +105,13 @@
                         <th>승인</th>
                         <td class="main__followgoal-td">
                           <label>
-                            <input type="radio" name="fPermission" value="" checked/> 전체
+                            <input type="radio" name="fPermission" value="" class="permission" checked/> 전체
                           </label>
                           <label>
-                            <input type="radio" name="fPermission" value="Y" /> 승인
+                            <input type="radio" name="fPermission" value="Y" class="permission"/> 승인
                           </label>
                           <label>
-                            <input type="radio" name="fPermission" value="N" /> 미승인
+                            <input type="radio" name="fPermission" value="N" class="permission"/> 미승인
                           </label>
                         </td>
                       </tr>
@@ -133,9 +133,9 @@
                     </tbody>
                   </table>
                   <div class="main__user-search-btn-div">
-                    <a href=""
-                      ><span class="main__user-search-btn">검색</span></a
-                    >
+
+                      <span class="main__user-search-btn">검색</span>
+
                   </div>
                 </div>
               </section>
