"내 게시물 페이지 완료" "스티커 신청페이지 xml 완료"

--- a/src/main/resources/static/css/mypage/myPageBookContainer.css
+++ b/src/main/resources/static/css/mypage/myPageBookContainer.css
@@ -144,6 +144,13 @@ a {
   background-color: whitesmoke;
 }
 
+#profile-photo > img {
+  width: 100%;
+  height: 100%;
+  border-width: 1px;
+  border-radius: 50px;
+}
+
 #hippo {
   width: 48px;
   height: 48px;
