--- a/src/main/resources/static/css/mypage/myPageInt.css
+++ b/src/main/resources/static/css/mypage/myPageInt.css
@@ -145,6 +145,13 @@ a {
   background-color: whitesmoke;
 }
 
+#profile-photo > img {
+  width: 100%;
+  height: 100%;
+  border-width: 1px;
+  border-radius: 50px;
+}
+
 #hippo {
   width: 48px;
   height: 48px;
@@ -152,12 +159,12 @@ a {
   margin-left: 7px;
 }
 
-input[type="file"] {
+input [type="file"] {
   position: absolute;
   width: 64px;
   height: 64px;
   opacity: 0;
-  cursor: pointer;
+
 }
 
 #profile-name {
