--- a/src/main/resources/templates/administrator/admin_chart.html
+++ b/src/main/resources/templates/administrator/admin_chart.html
@@ -68,7 +68,7 @@
             <form action="/admin/chart" method="post">
               <section class="main__center-container-box-search">
                 <div class="main__declaration-title-div">
-                  <h1>신고글 관리</h1>
+                  <h1>방문수 통계 조회</h1>
                 </div>
                 <div>
                   <table class="main__search-option">
@@ -78,7 +78,7 @@
                     </colgroup>
                     <tbody>
                       <tr>
-                        <th>방문수 통계 조회</th>
+                        <th>기간</th>
                         <td class="main__chart-search-date" data-nowterm="0">
                           <div>
                             <label
