--- a/src/main/resources/templates/board/post_main.html
+++ b/src/main/resources/templates/board/post_main.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" th:href="@{/css/board/post_main.css}" />
-    <script defer th:href="@{/js/board/post_main.js}"></script>
+    <script defer th:src="@{/js/board/post_main.js}"></script>
     <title>Document</title>
   </head>
   <body>
