--- a/src/main/resources/static/css/administrator/admin_chart.css
+++ b/src/main/resources/static/css/administrator/admin_chart.css
@@ -20,10 +20,10 @@ header > div {
   justify-content: flex-end;
 }
 
-header div {
-  padding-left: 9px;
-  margin-left: 9px;
-}
+/*header div {*/
+/*  padding-left: 9px;*/
+/*  margin-left: 9px;*/
+/*}*/
 
 header > div img {
   width: 25px;
