--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -99,12 +99,13 @@
                                                                 <span id="input-157-label" class="label">
                                                                     휴대폰 번호 입력
                                                                 </span>
-                                    <input autocomplete="off" id="input-157" aria-labelledby="input-157-label"
-                                           type="number" placeholder="01012345678" pattern="\d*"
+                                    <input id="input-157"
+                                           placeholder="01012345678"
                                            class="mds-input-field" name="userPhonenumber">
                                 </div>
-                                <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button"
-                                        style="display: none;"></button>
+                                <button type="submit" class="phone-info-code-button">
+                                    <span>인증번호 발송</span>
+                                </button>
                             </div>
                         </label>
                     </div>
